--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <section id="header">
-        <a href="#"><img src="img/logo.png" class="logo" width="10%" style="border-radius: 50%;" alt=""></a>
+        <a href="#"><img src="img/logo.png" class="logo" width="10%" alt=""></a>
 
         <div>
             <ul id="navbar">
