--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,14 @@
                 <img src="img/people/3.png" alt="">
                 <p><span>Lokesh</span> Senior Marketing Manager <br> Phone: + 91 886 132 1724 <br>Email:lokesh@xworkz.com</p>
             </div>
-
+            <div>
+                <img src="img/people/4.jpg" alt="">
+                <p><span>Vinay Kumar</span> Senior HR Manager <br> Phone: + 91 988 697 1480 <br>Email:vinaykumar@xworkz.com</p>
+            </div>
+            <div>
+                <img src="img/people/5.jpg" alt="">
+                <p><span>Akshara</span> Senior HR Manager <br> Phone: + 91  988 697 1483 <br>Email:akshara@xworkz.com</p>
+            </div>
         </div>
     </section>
 
