--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <div class="col">
             <img class="logo" src="img/logo.png" width="15%" alt="">
             <h4>Contact</h4>
-            <p><strong>Address: </strong> No 17/10, 28 , Basement, Dr Rajkumar Rd, 3rd Stage 4th Block, Prakash Nagar, Rajajinagar, Bengaluru, Karnataka 560021</p>
+            <p><strong>Address: </strong> X-workz ODC, No 17/10, 28 , Basement, Dr Rajkumar Rd, 3rd Stage 4th Block, Prakash Nagar, Rajajinagar, Bengaluru, Karnataka 560021</p>
             <p><strong>Phone: </strong> (+91) 886 132 1724 / 998 666 7354</p>
             <p><strong>Hours: </strong> 10:00 - 18:00, Mon - Sat</p>
             <div class="follow">
