--- a/shop.html
+++ b/shop.html
@@ -363,7 +363,7 @@
         </div>
 
         <div class="copyright">
-            <p>2022, Tech2 ec - HTML CSS Ecommerce Template</p>
+            <p>2022, Varun_Vinay_Spoorthi_Ecommerce Template</p>
         </div>
     </footer>
 
