--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         </div>
 
         <div class="copyright">
-            <p>2022, Varun_Vinay_Spoorthi_Ecommerce Template</p>
+            <p>2022, Varun_Vinay_Ecommerce Template</p>
         </div>
     </footer>
 
